smart assist page ui alignment issues fix

--- a/vtr-ui/src/app/components/pages/page-smart-assist/active-protection-system-advanced/active-protection-system-advanced.component.scss
+++ b/vtr-ui/src/app/components/pages/page-smart-assist/active-protection-system-advanced/active-protection-system-advanced.component.scss
@@ -20,5 +20,10 @@
         // @media screen and (max-width:640px){
         //     width: 100%;
         // }
-    }
+	}
+	::ng-deep .vtr-ui-switch-row.white-theme {
+		.vtr-col-pad, .col-12{
+			padding-left: 0;
+		}
+	}
 }
